<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_portfolio"
    tools:context="com.retroquack.kwak123.myappportfolio.PortfolioActivity"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/portfolio_activity_title"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/popular_movies"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:text="@string/popular_movies"/>

    <Button
        android:id="@+id/stock_hawk"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:text="@string/stock_hawk"/>

    <Button
        android:id="@+id/build_it_bigger"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/make_app_material"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:text="@string/make_app_material"/>

    <Button
        android:id="@+id/go_ubiquitous"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:text="@string/go_ubiquitous"/>

    <Button
        android:id="@+id/capstone"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:text="@string/capstone"/>

</LinearLayout>
